projects/sbioa/sbioa-parent-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parent
  name: parent-svc
spec:
  ports:
    - port: 8011
      protocol: TCP
      targetPort: 8011
  selector:
    app: parent
