projects/sbioa/sbioa-parent-service/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service
  labels:
    app: service
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  sbioa-dev-parent.coherent.in
      secretName: parent-tls
  rules:
  - host: "sbioa-dev-parent.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: parent-svc
            port: 
              number: 8011
